# agda-mcp

./: .gitignore  MCP_REFACTOR_STATUS.md  Main.hs  README.md  agda-mcp.agda-lib  agda-mcp.cabal  flake.nix  test_server.sh
patches/: mcp-server-header-optional.patch
src/: Main.hs
src/AgdaMCP/: FileEdit.hs  Format.hs  Repl.hs  Server.hs  SessionManager.hs  Types.hs
test/: Example.agda  PostulateTest.agda  SearchTest.agda  Spec.hs
test/AgdaMCP/: EditPersistenceSpec.hs  MultiAgentSpec.hs  ServerSpec.hs  TestUtils.hs
test/edit-persistence/: EditPersistenceTest.agda
