cabal-version: 3.0
name: agda-mcp
version: 0.1.0.0
synopsis: MCP server for Agda interaction
description: Model Context Protocol server providing structured access to Agda's interaction capabilities
homepage: https://github.com/anthropics/claude-code
license: MIT
author: Claude Code
maintainer: claude-code@anthropic.com
category: Development
build-type: Simple

executable agda-mcp
  main-is: Main.hs
  other-modules:
    AgdaMCP.Server
  build-depends:
    base >= 4.14 && < 5,
    Agda >= 2.8.0,
    aeson >= 2.0,
    text >= 1.2,
    containers >= 0.6,
    mtl >= 2.2,
    filepath >= 1.4,
    directory >= 1.3,
    bytestring >= 0.10
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints