cabal-version: 3.0
name: agda-mcp
version: 0.1.0.0
synopsis: MCP server for Agda interaction
description: Model Context Protocol server providing structured access to Agda's interaction capabilities
homepage: https://github.com/anthropics/claude-code
license: MIT
author: Claude Code
maintainer: claude-code@anthropic.com
category: Development
build-type: Simple

library
  exposed-modules:
    AgdaMCP.Server
    AgdaMCP.Types
    AgdaMCP.Repl
    AgdaMCP.Format
    AgdaMCP.FileEdit
  build-depends:
    base >= 4.14 && < 5,
    Agda >= 2.8.0,
    aeson >= 2.0,
    text >= 1.2,
    containers >= 0.6,
    mtl >= 2.2,
    filepath >= 1.4,
    directory >= 1.3,
    bytestring >= 0.10,
    vector >= 0.12,
    mcp-server >= 0.1.0.15,
    unordered-containers >= 0.2
  hs-source-dirs: src
  default-language: Haskell2010
  default-extensions:
    OverloadedStrings
    TemplateHaskell
    NamedFieldPuns
    DisambiguateRecordFields
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints

executable agda-mcp
  main-is: Main.hs
  build-depends:
    base >= 4.14 && < 5,
    agda-mcp,
    mcp-server >= 0.1.0.15
  default-language: Haskell2010
  default-extensions:
    OverloadedStrings
    TemplateHaskell
  ghc-options: -Wall -threaded

test-suite agda-mcp-tests
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
    AgdaMCP.ServerSpec
    AgdaMCP.EditPersistenceSpec
  build-depends:
    base >= 4.14 && < 5,
    agda-mcp,
    Agda >= 2.8.0,
    aeson >= 2.0,
    text >= 1.2,
    tasty >= 1.5,
    bytestring >= 0.10,
    vector >= 0.12,
    filepath >= 1.4,
    directory >= 1.3,
    mcp-server >= 0.1.0.15
  hs-source-dirs: test
  default-language: Haskell2010
  default-extensions:
    OverloadedStrings
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  x-set-environment: AGDA_DIR=/Users/faezs/homotopy-nn